prevent button stacking on mobile and move 911 button further left

--- a/src/ui/common/components/layouts/NavBar.css
+++ b/src/ui/common/components/layouts/NavBar.css
@@ -3,6 +3,11 @@
 		width: 100%;
 		text-align: right;
 	}
+
+
+	.nineoneone { 
+		margin: 0 30px 0 0;
+	}
 }
 
 .navBarDrawer {
